--- a/cms/app/views/dm_cms/admin/cms_blogs/index.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/index.html.erb
@@ -6,7 +6,7 @@
   <div class="header-buttons">
     <div class="collapse" id="header-buttons">
       <div class="well">
-        <%= link_to icon_label('icon-plus', 'New Blog'), new_admin_cms_blog_path, title: 'New Blog', class: 'btn btn-xs btn-default' %>
+        <%= link_to icon_label(:new, 'New Blog'), new_admin_cms_blog_path, title: 'New Blog', class: 'btn btn-xs btn-default' %>
       </div>
     </div>
   </div>
