--- a/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_contentitems/_form.html.erb
@@ -27,7 +27,7 @@
       </div>
     </div>
       
-    <%= submit_or_cancel cancel_url: admin_cms_page_url(@current_page) %>
+    <%= submit_or_cancel cancel_url: admin_cms_page_url(@current_page), delete_url: ([:admin, @cms_contentitem] unless @cms_contentitem.new_record?), delete_confirm: 'Are you sure you wish to delete this item?' %>
   <% end %>
 <% end %>
 
