--- a/cms/app/views/dm_cms/admin/cms_pages/show.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/show.html.erb
@@ -2,9 +2,8 @@
 <% content_for :secondary_title, "#{@current_page.slug} &mdash; #{@current_page.title}".html_safe %>
 <% content_for :content_title_extra do %>
   <%= page_header_buttons do %>
-    <%= link_to icon_label('icon-plus', 'Add Content'), new_content_admin_cms_contentitem_path(@current_page), title: 'Add Content Block', class: 'btn btn-xs btn-default' %>
-    <%= link_to icon_label('icon-trash', 'Delete Page'), admin_cms_page_path(@current_page), method: :delete, title: 'Delete Page', class: 'btn btn-xs btn-danger', data: {confirm: "Are you sure you wish to delete this page?"} %>
-    <%= link_to icon_label('icon-search', 'View Page'), url_for("/#{current_account.preferred_default_locale}/#{@current_page.slug}"), title: 'View Page', class: 'btn btn-xs btn-default', target: '_blank' %>
+    <%= link_to icon_label(:new, 'Add Content'), new_content_admin_cms_contentitem_path(@current_page), title: 'Add Content Block', class: 'btn btn-xs btn-default' %>
+    <%= link_to icon_label(:view, 'View Page'), url_for("/#{current_account.preferred_default_locale}/#{@current_page.slug}"), title: 'View Page', class: 'btn btn-xs btn-default', target: '_blank' %>
   <% end %>
 <% end %>
 
@@ -22,7 +21,7 @@
   </div>
   
   <div class="col-md-4">
-    <% toolbar = link_to icons('icon-pencil3'), edit_admin_cms_page_path(@current_page), title: 'Edit Page Details', class: "btn btn-link btn-icon" %>
+    <% toolbar = link_to icons(:edit), edit_admin_cms_page_path(@current_page), title: 'Edit Page Details', class: "btn btn-link btn-icon" %>
     <%= panel title: 'Page Details', toolbar: toolbar do %>
       <dl>
         <dt class="text-info">Slug</dt>
