--- a/core/app/views/dm_core/admin/shared/_header_stats_user_activity.html.erb
+++ b/core/app/views/dm_core/admin/shared/_header_stats_user_activity.html.erb
@@ -1,8 +1,2 @@
 <% accessed_users = UserSiteProfile.access_last_30_days %>
-<div class="page-stats-showcase">
-  <span>Active Users</span>
-  <h2><%= accessed_users[:total] %></h2>
-</div>
-<div class="bar-info chart">
-  <%= accessed_users[:list] %>
-</div>
+<%= stat_with_graph title: 'Active Users', number: accessed_users[:total], color_type: :info, data_list: accessed_users[:list] %>
