add a clear Facebook cache button

--- a/cms/app/views/dm_cms/admin/cms_blogs/show.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/show.html.erb
@@ -27,7 +27,8 @@
     <thead>
       <tr>
         <th>Title</th>
-        <th width="18"><span class='hovertip' title='Notification Email Sent'><%= icons('icon-envelop') %></span></th>
+        <th width="18"><span class='hovertip' title='Clear Facebook cache for the post'><%= icons('icon-facebook') %></span></th>
+        <th width="18"><span class='hovertip' title='Notification email sent'><%= icons('icon-envelop') %></span></th>
         <th width="50">Status</th>
       </tr>
     </thead>
@@ -38,11 +39,15 @@
             <td>
               <%= link_to(post.title, edit_admin_cms_post_path(post)) %>
             </td>
-            <th>
+            <td>
+              <%= link_to icons('icon-facebook'), "https://developers.facebook.com/tools/debug/og/object?q=#{dm_cms.post_show_url(post.cms_blog.slug, post.slug)}",
+                 target: '_blank' %>
+            </td>
+            <td>
               <% if post.notification_sent_on %>
                 <span class='hovertip' title='<%= format_date(post.notification_sent_on) %>'><%= icons('icon-envelop') %></span>
               <% end %>
-            </th>
+            </td>
             <td><%= post_presenter.label_published %></td>
           </tr>
         <% end %>
