--- a/core/app/assets/stylesheets/dm_core/admin.css
+++ b/core/app/assets/stylesheets/dm_core/admin.css
@@ -1,6 +1,22 @@
 /* @override 
 	http://dev.telugubasha.net:3500/assets/dm_core/admin.css?body=1 */
 
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the top of the
+ * compiled file, but it's generally better to create a new file per style scope.
+ *
+ *= require codemirror
+ *= require codemirror/themes/elegant
+ *= require codemirror/themes/neat
+ *= require codemirror/themes/midnight
+ *= require_self
+ */
 
 .tree_open > dl dt a.tree_expand, .tree_closed > dl dt a.tree_expand {
   text-indent: -6000px;
@@ -94,8 +110,9 @@
   border: none;
 }
 
-div.ace_editor {
+div.ace_editor, div.CodeMirror {
   border: 1px solid #ddd;
+  font: 13px/18px 'SourceCodePro-Regular','Source Code Pro', Courier;
 }
 
 
