use panel instead of content_box

--- a/app/views/dm_core/admin/dashboard/update_site_assets.html.erb
+++ b/app/views/dm_core/admin/dashboard/update_site_assets.html.erb
@@ -1,4 +1,4 @@
-<%= content_box :title => 'Results from Updating Assets' do %>
+<%= panel title: 'Results from Updating Assets' do %>
 <pre>
 <%= @results %>
 </pre>
